# blockchain-2

./: CMakeLists.txt  README.md  main.cpp
classes/: block.cpp  block.h  block_body.cpp  block_body.h  block_header.cpp  block_header.h  candidate.cpp  candidate.h  data.cpp  data.h  hash.cpp  hash.h  merkle.cpp  merkle.h  transaction.cpp  transaction.h  user.cpp  user.h
